--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 .vs/
+/frontEnd/productosApi/node_modules/
 /BackEnd/ProductosApi - copia/ProductosApi/bin/
 /BackEnd/ProductosApi - copia/ProductosApi/obj/
